force-app/main/default/objects/Translation__c/Translation__c.object-meta.xml
<CustomObject>
    <label>Translation</label>
    <nameField>
        <displayFormat>TR-{0000}</displayFormat>
        <label>Translation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Translation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>