force-app/main/default/objects/Translation__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Item</label>
    <referenceTo>npsp__General_Accounting_Unit__c</referenceTo>
    <relationshipLabel>Translations</relationshipLabel>
    <relationshipName>Translation</relationshipName>
    <type>Lookup</type>
</CustomField>