force-app/main/default/objects/Translation__c/fields/Payment_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Payment_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Schedule</label>
    <referenceTo>HA_Payment_Schedule__c</referenceTo>
    <relationshipLabel>Translation</relationshipLabel>
    <relationshipName>Translation</relationshipName>
    <type>Lookup</type>
</CustomField>