force-app/main/default/objects/Translation__c/fields/Translated_Text__c.field-meta.xml
<CustomField>
    <fullName>Translated_Text__c</fullName>
    <label>Translated Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>